--- a/public/index.ce.html
+++ b/public/index.ce.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="style.css"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Graph Editor</title>
-</head>
-<body style="margin: 0; padding: 0">
-<graph-editor></graph-editor>
-<script src="graph-editor.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" href="/favicon.ico" />
+        <link rel="stylesheet" href="../dist/style.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Graph Editor</title>
+    </head>
+    <body style="margin: 0; padding: 0">
+        <graph-editor></graph-editor>
+        <script src="graph-editor.js"></script>
+    </body>
 </html>
