--- a/public/index.ce.html
+++ b/public/index.ce.html
@@ -8,7 +8,13 @@
         <title>Graph Editor</title>
     </head>
     <body style="margin: 0; padding: 0">
-        <graph-editor></graph-editor>
+        <graph-editor id='ge1'></graph-editor>
+        <graph-editor id='ge2'></graph-editor>
         <script src="graph-editor.js"></script>
+    <script>
+        function getGraphEditorById(id) {
+            return document.getElementById(id)._instance.exposed
+        }
+    </script>
     </body>
 </html>
