graphHost for multiple components in CE

--- a/public/index.ce.html
+++ b/public/index.ce.html
@@ -8,7 +8,16 @@
         <title>Graph Editor</title>
     </head>
     <body style="margin: 0; padding: 0">
-        <graph-editor></graph-editor>
+    <div style='display: flex'>
+        <graph-editor id='ge1' style='flex: 1'></graph-editor>
+        <graph-editor id='ge2' style='flex: 1'></graph-editor>
+    </div>
         <script src="graph-editor.js"></script>
+        <script>
+            /*** This function can be used to get the graph editor instance by its id. ***/
+            function getGraphEditorById(id) {
+                return document.getElementById(id)._instance.exposed
+            }
+        </script>
     </body>
 </html>
