--- a/public/index.ce.html
+++ b/public/index.ce.html
@@ -2,15 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="/favicon.ico" />
+        <link rel="icon" href="./favicon.ico" />
         <link rel="stylesheet" href="./style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Graph Editor</title>
     </head>
     <body style="margin: 0; padding: 0">
-    <div style='display: flex'>
-        <graph-editor id='ge1' style='flex: 1'></graph-editor>
-        <graph-editor id='ge2' style='flex: 1'></graph-editor>
+    <div style='display: flex; position: relative; height: 100vh'>
+        <graph-editor id='ge1' style='flex: 1; position: relative'></graph-editor>
+        <graph-editor id='ge2' style='flex: 1; position: relative'></graph-editor>
     </div>
         <script src="graph-editor.js"></script>
         <script>
