--- a/application-example-ce/index.ce.html
+++ b/application-example-ce/index.ce.html
@@ -40,16 +40,29 @@
         // if you call setGraph without arguments, it will clear the graph editor
         inst1.setGraph()
 
-        // change the color of existing nodes by their id
+        // change the color of existing nodes and links by their id
         // this color can be a html color name (https://www.w3schools.com/colors/colors_names.asp), hexadecimal, rgb or hsl-color-model format
         inst1.setNodeColor("bisque", [0,1])
         // change the color of all existing nodes by just providing a color without providing ids
         inst2.setNodeColor("HSL(212,92%,45%,0.5)")
         inst2.setNodeColor("RGB(250,70,99)")
         inst2.setNodeColor("#8FBC8F")
+        //the same for links
+        inst2.setLinkColor("orangered", ["0-1", "2-2"])
 
-        // turning ability to zoom on and of
+        // delete nodes or links by their id
+        // delete link that origins in node with id 0 and points to node with id 1
+        inst2.deleteLink("0-1")
+        // delete node with id 0 and id 1
+        inst2.deleteNode([0, 1])
+
+        // turning ability on and off for zooming, that nodes repel each other and that there is a fixed link distance
         inst1.toggleZoom(false)
+        inst1.onToggleNodePhysics(true)
+        inst1.toggleFixedLinkDistance(true)
+
+        // after zooming, reset the view to the default position
+        inst2.resetView()
 
         //This function can be used, to get the graph editor instance by its id.
         function getGraphEditorById(id) {
