app example files

--- a/application-example-ce/index.ce.html
+++ b/application-example-ce/index.ce.html
@@ -58,7 +58,7 @@
 
         // turning ability on and off for zooming, that nodes repel each other and that there is a fixed link distance
         inst1.toggleZoom(false)
-        inst1.onToggleNodePhysics(true)
+        inst1.toggleNodePhysics(true)
         inst1.toggleFixedLinkDistance(true)
 
         // after zooming, reset the view to the default position
