application example files

--- a/application-example-ce/CLI/index.ce.html
+++ b/application-example-ce/CLI/index.ce.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="./favicon.ico" />
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="icon" href='./favicon.ico' />
+        <link rel="stylesheet" href='./style.css' />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Graph Editor</title>
     </head>
@@ -12,7 +12,7 @@
         <graph-editor id='ge1' style='flex: 1; position: relative'></graph-editor>
         <graph-editor id='ge2' style='flex: 1; position: relative'></graph-editor>
     </div>
-    <script src="graph-editor.js"></script>
+    <script src='./graph-editor.js'></script>
     <script>
         // get the graph editor instance by its id, on this you will call all available functions
         let inst1 = getGraphEditorById('ge1')
