--- a/public/index.ce.html
+++ b/public/index.ce.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="./style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Graph Editor</title>
+        <!-- MathJax for TeX and MathML notation -->
+        <script src='load-mathjax.js' defer></script>
     </head>
     <body style="margin: 0; padding: 0">
     <div style='display: flex; position: relative; height: 100vh'>
