--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Graph Editor</title>
+        <!-- MathJax for TeX notation -->
+        <script src='/load-mathjax.js' async></script>
     </head>
     <body>
         <div id="app"></div>
