--- a/public/index.ce.html
+++ b/public/index.ce.html
@@ -7,15 +7,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Graph Editor</title>
         <!-- MathJax for TeX and MathML notation -->
-        <script src='load-mathjax.js' defer></script>
+        <script src='load-mathjax.js' async></script>
     </head>
     <body style="margin: 0; padding: 0">
         <div style='display: flex; position: relative; height: 100vh'>
-            <graph-editor id='ge1' style='flex: 1; position: relative'></graph-editor>
+            <graph-component id='gc1' style='flex: 1; position: relative'></graph-component>
         </div>
-        <script src="graph-editor.js"></script>
+        <script src="graph-component.js"></script>
         <script>
-            function getGraphEditorById(id) {
+            function getGraphComponentById(id) {
                 return document.getElementById(id)._instance.exposed
             }
         </script>
