--- a/application-example-ce/Menu/index.ce.html
+++ b/application-example-ce/Menu/index.ce.html
@@ -6,11 +6,18 @@
         <link rel="stylesheet" href="./style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Graph Editor</title>
+        <!-- MathJax for TeX and MathML notation -->
+        <script src='load-mathjax.js' async></script>
     </head>
     <body style="margin: 0; padding: 0">
         <div style='display: flex; position: relative; height: 100vh'>
             <graph-component id='gc1' style='flex: 1; position: relative'></graph-component>
         </div>
         <script src="graph-component.js"></script>
+        <script>
+            function getGraphComponentById(id) {
+                return document.getElementById(id)._instance.exposed
+            }
+        </script>
     </body>
 </html>
