--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!-- MathJax for TeX notation -->
         <script src='/load-mathjax.js' async></script>
     </head>
-    <body>
+    <body style='margin: 0; padding: 0'>
         <div id="app"></div>
         <script type="module" src="/src/main.ts"></script>
     </body>
