--- a/public/index.ce.html
+++ b/public/index.ce.html
@@ -5,7 +5,7 @@
         <link rel="icon" href="./favicon.ico" />
         <link rel="stylesheet" href="./style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Graph Editor</title>
+        <title>Graph Component</title>
         <!-- MathJax for TeX and MathML notation -->
         <script src='load-mathjax.js' async></script>
     </head>
