chore: update to check if everything still works as expected after updating dependencies and removing custom code for avoiding shadow root

--- a/application-example-ce/Menu/index.ce.html
+++ b/application-example-ce/Menu/index.ce.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" href="./favicon.ico" />
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="./graph-component.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Graph Editor</title>
         <!-- MathJax for TeX and MathML notation -->
