#22 clean up examples

--- a/application-examples/custom-element/index-two-components.html
+++ b/application-examples/custom-element/index-two-components.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href='./favicon.ico' />
-        <link rel="stylesheet" href='./graph-component.css' />
+        <link rel="icon" href='favicon.ico' />
+        <link rel="stylesheet" href='graph-component.css' />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Graph Editor</title>
         <!-- MathJax for TeX notation -->
@@ -14,7 +14,7 @@
         <graph-component id='gc1' style='flex: 1; position: relative'></graph-component>
         <graph-component id='gc2' style='flex: 1; position: relative'></graph-component>
     </div>
-    <script src='./graph-component.js'></script>
+    <script src='graph-component.js'></script>
     <script>
         // get the graph editor instance by its id, on this you will call all available functions
         let inst1 = getGraphComponentById('gc1')
