--- a/application-examples/vue-component/index.html
+++ b/application-examples/vue-component/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="icon" type="image/x-icon" href="dependencies/graph-component/favicon.ico" />
     <script src="dependencies/graph-component/load-mathjax.js"></script>
     <title>Graph Editor</title>
 </head>
