#22 delete ref of old deps vue application example

--- a/application-examples/vue-component/index.html
+++ b/application-examples/vue-component/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="icon" type="image/x-icon" href="dependencies/graph-component/favicon.ico" />
-    <script src="dependencies/graph-component/load-mathjax.js"></script>
+    <link rel="icon" type="image/x-icon" href="@aig-hagen/graph-component/lib/favicon.ico" />
+    <script src="@aig-hagen/graph-component/lib/load-mathjax.js"></script>
     <title>Graph Editor</title>
 </head>
 <body style='margin: 0; padding: 0'>
